testsuite/tests/typecheck/should_fail/TcCoercibleFail2.stderr

TcCoercibleFail2.hs:5:10: error:
    Illegal instance declaration for ‘Coercible () ()’
      Manual instances of this class are not permitted.
    In the instance declaration for ‘Coercible () ()’
